[package]

name = "dev_menu"
version = "0.2.0"
authors = ["Steve Jahns <s.t.jahns@gmail.com>"]
keywords = ["menu", "gfx"]
description = "A simple in-engine developer menu library."
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/dev_menu"
homepage = "https://github.com/PistonDevelopers/dev_menu"

[dependencies]

pistoncore-input = "0.5.1"
gfx = "0.7.0"
gfx_debug_draw = "0.4.0"
